fix double encoding problem with MRLs

QUrl::from* can auto-encode characters such as #, toString will not
automatically decode again. This results in a double encoding since
MRL always encodes according to phonon-gstreamer's expectations.
To avoid this use toLocalFile() for local paths as this returns decoded
paths which we can then percent encode correctly.

BUG: 356218
FIXED-IN: 4.9.0
CHANGELOG: Fix playback of local files containing a hash (#) character